# eso-build-calculator

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  POSSIBLE_OPTIMIZATIONS.md  README.md  TODO.md  build.json  eslint.config.mjs  nightblade-arcanist.json  package-lock.json  package.json  pure-nightblade.json  tsconfig.json
.claude/commands/: add-skills.md
benches/: optimization.rs
builds/: nightblade-172k.json
datamine/: README.md  extract_sets.py  generate_passives_rs.py  generate_sets_rs.py  generate_skills_rs.py  nightblade-172k.json  parse_sets.py  parse_skill_coefficients.py  sets.json
datamine/modifiers/: champion-points.txt
datamine/parsed/: sets.json
datamine/raw/: UESP_ESO Sets.html
docs/optimize/: README.md
src/: index.ts  lib.rs  main.rs
src/cli/: breakpoints.rs  build_config.rs  calculate.rs  convert.rs  mod.rs  optimize.rs  parsers.rs  rank.rs  simulate.rs  simulation_display.rs  view.rs
src/commands/: optimize-build.ts  rank-skills.ts  view-skills.ts
src/data/: light_attacks.rs  mod.rs  skills.rs  types.rs  types.ts
src/domain/: bonus.rs  bonus_source.rs  bonus_target.rs  bonus_trigger.rs  bonus_value.rs  build.rs  build_config.rs  build_constrains.rs  character_stats.rs  class_name.rs  damage_coefficients.rs  damage_flags.rs  damage_type.rs  dot_damage.rs  equipment.rs  execute.rs  food.rs  formulas.rs  gear_config.rs  gear_set.rs  hit_damage.rs  light_attack.rs  mod.rs  mundus.rs  passive.rs  potion.rs  race.rs  resource.rs  set_proc.rs  simulation.rs  skill.rs  skill_damage.rs  skill_line_name.rs  (+6 more)
tests/: optimization_e2e.rs
(+264 files in other folders)
