[package]
name = "eso-build-calculator"
version = "1.0.0"
edition = "2021"
description = "ESO Build Calculator CLI - Find optimal builds to maximize damage per cast"
authors = ["Javier Rodriguez Posada"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
colored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
once_cell = "1.19"
bitflags = { version = "2", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimization"
harness = false

[profile.release]
lto = true
opt-level = 3
